# spotify-auto-renewal

./: Cargo.toml  README.md  config.toml  token.txt
src/: config.rs  docker.rs  main.rs  proxy.rs
