[package]
name = "spotify-auto-renewal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["socks"]}
futures = "0.3"
tokio = { version = "1.25.0", features = ["full"] }
mini-redis = "0.4"
cron = "0.12.0"
chrono = "0.4.23"
config = "0.13.3"